# tito

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  requirements.txt
src/tito/data/: btc_dl.py  timeframe.py
src/tito/data/btc_data/: daily_2y.csv  hourly_12_6mo.csv  hourly_2mo.csv  hourly_6_2mo.csv  hourly_6_6mo.csv  hourly_6mo.csv
src/tito/experiment/: efficiency_ratio.py
src/tito/strategies/: btc_trading_strategy_results.csv  btc_trading_strategy_results_adjusted_ma.csv  btc_trading_strategy_results_ma_rsi.csv  btc_usd_hourly_last_month.csv  rolling_avg.py
src/tito/strategies/bollinger_bands/: bb.py
src/tito/strategies/ema/: ema_grid_search.py  macd.py  macd_bb.py
src/tito/strategies/rolling_avg/: rolling_avg.py
test/: altair_test.ipynb  altair_test.py
