[project]
name = "tito"
version = "0.0.1"
description = "A stock trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.4.0",
    "polars>=1.29.0",
    "matplotlib>=3.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "black>=25.1.0",
    # "spyder>=6.0.5",
]
