[project]
name = "tito"
version = "0.0.1"
description = "A stock trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.4.0",
    "polars>=1.29.0",
    "matplotlib>=3.10.1",
    "yfinance>=0.2.58",
    "spyder"
]

# [project.optional-dependencies]
# dev = [
#     "spyder",
# ]
